--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,6 +128,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -646,6 +647,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -958,7 +960,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1168,7 +1169,6 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:c1e1:0:1::ca92:b254;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
@@ -1180,6 +1180,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:41:a921::1;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1484,6 +1485,10 @@ allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
+allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
+allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
 allow 2a0e:bfc7::216:3cff:fe98:45cb;
@@ -1617,7 +1622,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1725,6 +1729,10 @@ allow 45.9.156.161;
 allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
+allow 45.95.169.104;
+allow 45.95.169.109;
+allow 45.95.169.110;
+allow 45.95.169.252;
 allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
@@ -1838,6 +1846,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
