--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,6 +15,7 @@ deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
+deny 2001:41d0:720:e300:25::;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
@@ -131,7 +132,6 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -340,7 +340,6 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
-deny 2a00:c1e1:0:1::ca92:b254;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4f9:2b:75d::124:148;
@@ -352,6 +351,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:4780:41:a921::1;
+deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -656,6 +656,10 @@ deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
+deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:14::24a8;
+deny 2a0e:bfc0:0:2::8a62;
+deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
 deny 2a0e:bfc7::216:3cff:fe98:45cb;
