--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -213,6 +213,7 @@ deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.164;
+deny 178.175.148.155;
 deny 178.175.148.246;
 deny 178.17.58.159;
 deny 178.20.55.16;
@@ -960,6 +961,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1167,6 +1169,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
@@ -1180,7 +1183,6 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:4780:41:a921::1;
-deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1594,6 +1596,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
@@ -1622,6 +1625,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1777,6 +1781,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
+deny 5.34.182.203;
 deny 54.36.101.21;
 deny 54.36.108.162;
 deny 5.45.102.93;
@@ -1846,7 +1851,6 @@ deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.131.71;
 deny 82.221.139.190;
-deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
@@ -1867,6 +1871,7 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
 deny 87.120.254.132;
+deny 87.121.79.55;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
@@ -1878,7 +1883,6 @@ deny 89.147.110.118;
 deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
-deny 89.185.82.63;
 deny 89.234.157.254;
 deny 89.58.26.216;
 deny 89.58.41.156;
