--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -471,7 +471,6 @@ deny 185.246.188.73;
 deny 185.246.188.74;
 deny 185.246.189.99;
 deny 185.246.84.179;
-deny 185.247.184.105;
 deny 185.247.226.95;
 deny 185.252.232.218;
 deny 185.254.196.141;
@@ -1183,6 +1182,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:4780:41:a921::1;
+deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1233,6 +1233,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1244,7 +1245,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9dc0:31::c0cc:4d;
-deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
@@ -1519,6 +1519,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
@@ -1757,6 +1758,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1851,6 +1853,7 @@ deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.131.71;
 deny 82.221.139.190;
+deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
@@ -1898,6 +1901,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
+deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
