--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,7 +128,6 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
-allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -647,7 +646,6 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -1182,7 +1180,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:41:a921::1;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1595,7 +1592,7 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
-allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1640,7 +1637,6 @@ allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
 allow 43.160.194.14;
-allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1850,7 +1846,6 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1871,6 +1866,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
