Update lists at 20251016-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,6 +128,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -502,6 +503,7 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.2;
 allow 190.120.229.98;
+allow 190.123.46.170;
 allow 190.211.254.185;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -646,6 +648,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -891,7 +894,6 @@ allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
-allow 23.137.255.85;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.177.185.98;
@@ -1153,6 +1155,7 @@ allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:2:ee01::7583;
 allow 2800:ba0:6:c1::4858;
+allow 2803:200:ffff:ff0c::ae92:2a2f;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
@@ -1498,7 +1501,6 @@ allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1592,7 +1594,7 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
-allow 2a14:c380:280:77::a;
+allow 2a14:7583:f607::;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1637,6 +1639,7 @@ allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
 allow 43.160.194.14;
+allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1803,7 +1806,6 @@ allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
@@ -1866,7 +1868,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
-allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
