--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -197,7 +197,6 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -582,6 +581,7 @@ allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.26.192.177;
 allow 194.26.192.77;
+allow 194.42.196.42;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
@@ -618,7 +618,6 @@ allow 198.58.107.53;
 allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.218;
 allow 198.98.57.74;
@@ -894,6 +893,7 @@ allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
+allow 23.137.255.85;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.177.185.98;
@@ -919,7 +919,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -980,7 +979,6 @@ allow 2604:a00:101:4:216:3eff:fe2f:20c3;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:253:2085:7b82:89a7:2145;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1174,7 +1172,6 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
-allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1501,6 +1498,7 @@ allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1595,6 +1593,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1806,6 +1805,7 @@ allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
+allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
@@ -1868,6 +1868,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1931,6 +1932,5 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
-allow 95.216.107.148;
 allow 96.8.119.172;
 allow 98.128.173.33;
