Update lists at 20251017-0601

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -923,6 +923,7 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
+deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
@@ -963,6 +964,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1241,7 +1243,6 @@ deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
 deny 2a04:52c0:116:e0e3::1;
-deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1624,6 +1625,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1759,7 +1761,6 @@ deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.110.120;
 deny 5.255.111.64;
-deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.151;
