--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -132,6 +132,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -409,7 +410,6 @@ deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
 deny 2a04:52c0:116:e0e3::1;
-deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
