--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,6 +129,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -250,7 +251,6 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.104.120.10;
 allow 185.104.120.40;
-allow 185.106.102.102;
 allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
@@ -649,6 +649,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -742,6 +743,7 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.182.99.129;
+allow 202.61.253.243;
 allow 203.55.81.1;
 allow 203.55.81.2;
 allow 204.137.14.104;
@@ -961,6 +963,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1272,6 +1275,9 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:2dc2:0:5963::;
+allow 2a09:61c0::20;
+allow 2a09:61c0::21;
+allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -1493,7 +1499,6 @@ allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
-allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
@@ -1592,6 +1597,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
 allow 2c0f:6c0:0:d::d28b;
@@ -1620,6 +1626,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1646,7 +1653,6 @@ allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
-allow 45.137.99.16;
 allow 45.137.99.182;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1684,11 +1690,13 @@ allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
-allow 45.38.20.123;
 allow 45.38.20.153;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
+allow 45.66.35.20;
+allow 45.66.35.21;
+allow 45.66.35.22;
 allow 45.66.35.35;
 allow 45.79.144.222;
 allow 45.80.158.167;
@@ -1860,6 +1868,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
