--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -129,6 +129,7 @@ deny 139.99.8.57;
 deny 141.98.11.62;
 deny 143.20.64.235;
 deny 144.126.133.74;
+deny 144.172.73.31;
 deny 144.31.188.82;
 deny 146.59.126.232;
 deny 146.59.231.4;
@@ -250,7 +251,6 @@ deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.104.120.10;
 deny 185.104.120.40;
-deny 185.106.102.102;
 deny 185.107.57.64;
 deny 185.107.57.65;
 deny 185.107.57.66;
@@ -649,6 +649,7 @@ deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
+deny 2001:41d0:720:e300:25::;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
@@ -742,6 +743,7 @@ deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 202.182.99.129;
+deny 202.61.253.243;
 deny 203.55.81.1;
 deny 203.55.81.2;
 deny 204.137.14.104;
@@ -961,6 +963,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1272,6 +1275,9 @@ deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:2dc2:0:5963::;
+deny 2a09:61c0::20;
+deny 2a09:61c0::21;
+deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -1493,7 +1499,6 @@ deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
-deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:85c1:356:62ed::1;
@@ -1592,6 +1597,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
@@ -1620,6 +1626,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1646,7 +1653,6 @@ deny 45.133.73.63;
 deny 45.133.74.53;
 deny 45.134.225.36;
 deny 45.137.70.158;
-deny 45.137.99.16;
 deny 45.137.99.182;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1684,11 +1690,13 @@ deny 45.143.200.32;
 deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.154.98.33;
-deny 45.38.20.123;
 deny 45.38.20.153;
 deny 45.58.190.74;
 deny 45.61.185.172;
 deny 45.61.188.15;
+deny 45.66.35.20;
+deny 45.66.35.21;
+deny 45.66.35.22;
 deny 45.66.35.35;
 deny 45.79.144.222;
 deny 45.80.158.167;
@@ -1860,6 +1868,7 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
 deny 87.120.254.132;
+deny 87.121.79.55;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
