--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,6 +15,7 @@ deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
+deny 2001:41d0:720:e300:25::;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
@@ -131,6 +132,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -441,6 +443,9 @@ deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:2dc2:0:5963::;
+deny 2a09:61c0::20;
+deny 2a09:61c0::21;
+deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -662,7 +667,6 @@ deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
-deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:85c1:356:62ed::1;
@@ -761,6 +765,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
