--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,6 +129,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -491,6 +492,7 @@ allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.42.170.203;
 allow 185.56.171.94;
+allow 185.66.91.17;
 allow 185.67.82.114;
 allow 185.82.219.109;
 allow 188.239.191.25;
@@ -641,6 +643,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -903,7 +906,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -954,7 +956,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1611,7 +1612,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
