Update lists at 20251019-0601

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,7 +131,6 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -633,6 +632,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:127;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
 deny 2a0e:4005:1002:ffff:185:40:4:143;
 deny 2a0e:4005:1002:ffff:185:40:4:149;
+deny 2a0e:4005:1002:ffff:185:40:4:20;
 deny 2a0e:4005:1002:ffff:185:40:4:22;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
