--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -478,6 +478,7 @@ allow 185.35.202.222;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
+allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.143;
 allow 185.40.4.149;
@@ -955,7 +956,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1458,6 +1458,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:143;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
+allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1615,7 +1616,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
