--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -478,6 +478,7 @@ deny 185.35.202.222;
 deny 185.40.4.100;
 deny 185.40.4.101;
 deny 185.40.4.121;
+deny 185.40.4.127;
 deny 185.40.4.132;
 deny 185.40.4.143;
 deny 185.40.4.149;
@@ -955,7 +956,6 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1458,6 +1458,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:127;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
 deny 2a0e:4005:1002:ffff:185:40:4:143;
 deny 2a0e:4005:1002:ffff:185:40:4:149;
+deny 2a0e:4005:1002:ffff:185:40:4:20;
 deny 2a0e:4005:1002:ffff:185:40:4:22;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1615,7 +1616,6 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
