--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -478,6 +478,7 @@ set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
 set_real_ip_from 185.40.4.121;
+set_real_ip_from 185.40.4.127;
 set_real_ip_from 185.40.4.132;
 set_real_ip_from 185.40.4.143;
 set_real_ip_from 185.40.4.149;
@@ -955,7 +956,6 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1458,6 +1458,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:143;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:149;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:20;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:22;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1615,7 +1616,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
