Update lists at 20251019-0901

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -276,6 +276,7 @@ allow 185.129.62.64;
 allow 185.130.47.58;
 allow 185.132.53.107;
 allow 185.132.53.150;
+allow 185.132.53.188;
 allow 185.138.88.25;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -850,6 +851,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
