--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -276,6 +276,7 @@ deny 185.129.62.64;
 deny 185.130.47.58;
 deny 185.132.53.107;
 deny 185.132.53.150;
+deny 185.132.53.188;
 deny 185.138.88.25;
 deny 185.150.28.13;
 deny 185.154.110.142;
@@ -956,6 +957,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1229,7 +1231,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:d7eb::1;
-deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
+deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
@@ -1587,6 +1589,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2a14:c380:50:20::a;
 deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:11::5e3d;
 deny 2c0f:6c0:0:d::d28b;
@@ -1616,6 +1619,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
