--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -276,6 +276,7 @@ set_real_ip_from 185.129.62.64;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.107;
 set_real_ip_from 185.132.53.150;
+set_real_ip_from 185.132.53.188;
 set_real_ip_from 185.138.88.25;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -850,6 +851,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
