--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -27,6 +27,7 @@ allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.51;
 allow 104.244.74.97;
+allow 104.244.75.140;
 allow 104.244.77.208;
 allow 104.244.78.162;
 allow 104.244.78.232;
@@ -224,6 +225,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.30.234.82;
+allow 179.35.7.224;
 allow 179.43.128.16;
 allow 179.43.134.19;
 allow 179.43.159.194;
@@ -626,7 +628,6 @@ allow 199.195.251.119;
 allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
-allow 199.26.150.137;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -888,7 +889,6 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -962,7 +962,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -995,6 +994,7 @@ allow 2605:6400:30:ebb6:532:acc:65:31;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:f04d:2605:6400:30:30;
+allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
@@ -1486,7 +1486,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1792,7 +1791,6 @@ allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.210;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
