--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -27,6 +27,7 @@ set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.51;
 set_real_ip_from 104.244.74.97;
+set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
@@ -224,6 +225,7 @@ set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.30.234.82;
+set_real_ip_from 179.35.7.224;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.134.19;
 set_real_ip_from 179.43.159.194;
@@ -626,7 +628,6 @@ set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
-set_real_ip_from 199.26.150.137;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -888,7 +889,6 @@ set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.105.248;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.113;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -962,7 +962,6 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -995,6 +994,7 @@ set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
+set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
@@ -1486,7 +1486,6 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
-set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1792,7 +1791,6 @@ set_real_ip_from 64.190.76.4;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
-set_real_ip_from 66.78.40.210;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
