Update lists at 20251023-0001

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,6 +130,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -441,7 +442,6 @@ deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:d380:0:103:acab:4c4b:ac4b:1312;
 deny 2a07:6d80:1e01:3a13::;
-deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:2dc2:0:5963::;
