--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -274,7 +274,6 @@ deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.129.62.64;
-deny 185.130.47.58;
 deny 185.132.53.107;
 deny 185.132.53.150;
 deny 185.132.53.188;
@@ -916,7 +915,6 @@ deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -952,6 +950,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1264,7 +1263,6 @@ deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:d380:0:103:acab:4c4b:ac4b:1312;
 deny 2a07:6d80:1e01:3a13::;
-deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:2dc2:0:5963::;
@@ -1616,6 +1614,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
