--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -951,6 +951,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1616,6 +1617,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1894,7 +1896,6 @@ deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
 deny 93.123.109.116;
-deny 93.123.109.44;
 deny 93.123.12.112;
 deny 93.94.51.243;
 deny 93.95.227.37;
