Update lists at 20251026-0001

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -193,6 +193,7 @@ deny 173.224.219.44;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
+deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.134.4;
 deny 176.65.148.133;
@@ -291,10 +292,6 @@ deny 185.193.52.180;
 deny 185.195.71.244;
 deny 185.207.107.130;
 deny 185.207.107.216;
-deny 185.220.100.240;
-deny 185.220.100.241;
-deny 185.220.100.242;
-deny 185.220.100.243;
 deny 185.220.100.244;
 deny 185.220.100.245;
 deny 185.220.100.246;
@@ -1169,6 +1166,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1251,7 +1249,6 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 deny 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
@@ -1273,10 +1270,6 @@ deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
 deny 2a0b:f4c0:16c:12::1;
-deny 2a0b:f4c0:16c:13::1;
-deny 2a0b:f4c0:16c:14::1;
-deny 2a0b:f4c0:16c:15::1;
-deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
@@ -1504,7 +1497,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
@@ -1631,7 +1623,6 @@ deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.73.14;
-deny 45.133.73.63;
 deny 45.133.74.53;
 deny 45.134.225.36;
 deny 45.137.201.26;
@@ -1883,7 +1874,6 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
-deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
