--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -354,6 +354,7 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -436,7 +437,6 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
 deny 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
@@ -458,10 +458,6 @@ deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
 deny 2a0b:f4c0:16c:12::1;
-deny 2a0b:f4c0:16c:13::1;
-deny 2a0b:f4c0:16c:14::1;
-deny 2a0b:f4c0:16c:15::1;
-deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
@@ -689,7 +685,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
