Update lists at 20251026-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -47,11 +47,9 @@ allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
 allow 107.189.12.7;
-allow 107.189.13.180;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.14.4;
-allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.2.108;
 allow 107.189.27.145;
@@ -59,7 +57,6 @@ allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
-allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.33;
 allow 107.189.31.52;
@@ -572,6 +569,7 @@ allow 194.42.196.42;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -942,7 +940,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1006,7 +1003,6 @@ allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f3d3:7c3:507c:6f32:c132;
-allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1026,7 +1022,6 @@ allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:30:f9dd:ecef:a3db:545c:76ee;
 allow 2605:6400:30:fa41:69b1:324f:8ed4:8f76;
@@ -1259,6 +1254,7 @@ allow 2a07:6d80:1e01:3a13::;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
+allow 2a09:2dc2:0:588a::;
 allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
@@ -1499,6 +1495,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1600,7 +1597,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1625,6 +1621,7 @@ allow 45.13.225.78;
 allow 45.133.73.14;
 allow 45.133.73.63;
 allow 45.133.74.53;
+allow 45.134.173.203;
 allow 45.134.225.36;
 allow 45.137.201.26;
 allow 45.137.201.31;
@@ -1652,6 +1649,7 @@ allow 45.141.215.200;
 allow 45.141.215.238;
 allow 45.141.215.28;
 allow 45.141.215.40;
+allow 45.141.215.45;
 allow 45.141.215.56;
 allow 45.141.215.61;
 allow 45.141.215.62;
