Update lists at 20251027-0301

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -497,7 +497,6 @@ allow 190.211.254.97;
 allow 192.108.48.150;
 allow 192.159.99.168;
 allow 192.159.99.74;
-allow 192.34.80.176;
 allow 192.42.116.173;
 allow 192.42.116.174;
 allow 192.42.116.175;
@@ -877,6 +876,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -958,6 +958,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1222,6 +1223,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1729,6 +1731,7 @@ allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.29.238.25;
 allow 46.29.238.31;
+allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.15.12;
@@ -1740,6 +1743,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1908,6 +1912,7 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
+allow 94.74.164.143;
 allow 94.74.164.89;
 allow 94.75.225.81;
 allow 95.128.43.164;
