Update lists at 20251028-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -54,7 +54,6 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.2.108;
-allow 107.189.27.145;
 allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
@@ -195,7 +194,6 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -289,6 +287,7 @@ allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.191.239.172;
 allow 185.191.239.49;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -598,6 +597,7 @@ allow 194.42.196.42;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -789,7 +789,6 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.50.77;
 allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -966,13 +965,11 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
-allow 2602:fa59:5:915::1;
 allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
@@ -1545,6 +1542,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1646,7 +1644,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
