Update lists at 20251029-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -421,6 +421,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
+deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
@@ -447,6 +448,7 @@ deny 2a07:6d80:1e01:3a13::;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
+deny 2a09:2dc2:0:5084::;
 deny 2a09:2dc2:0:588a::;
 deny 2a09:2dc2:0:5963::;
 deny 2a09:61c0::20;
