--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -221,7 +221,6 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
-allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.43.128.16;
 allow 179.43.133.50;
@@ -557,7 +556,6 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.237.155.109;
-allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
 allow 193.26.115.123;
@@ -768,6 +766,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 213.111.148.93;
 allow 213.111.150.96;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -1235,6 +1234,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
+allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1261,6 +1261,7 @@ allow 2a07:6d80:1e01:3a13::;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
+allow 2a09:2dc2:0:5084::;
 allow 2a09:2dc2:0:588a::;
 allow 2a09:2dc2:0:5963::;
 allow 2a09:61c0::20;
@@ -1597,7 +1598,6 @@ allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
-allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
 allow 38.135.24.176;
@@ -1827,6 +1827,7 @@ allow 82.221.131.71;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
+allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
