--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -221,7 +221,6 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
-set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.133.50;
@@ -557,7 +556,6 @@ set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.237.155.109;
-set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.235;
 set_real_ip_from 193.26.115.123;
@@ -768,6 +766,7 @@ set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
+set_real_ip_from 213.111.148.93;
 set_real_ip_from 213.111.150.96;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
@@ -1235,6 +1234,7 @@ set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9b85:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -1261,6 +1261,7 @@ set_real_ip_from 2a07:6d80:1e01:3a13::;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
+set_real_ip_from 2a09:2dc2:0:5084::;
 set_real_ip_from 2a09:2dc2:0:588a::;
 set_real_ip_from 2a09:2dc2:0:5963::;
 set_real_ip_from 2a09:61c0::20;
@@ -1597,7 +1598,6 @@ set_real_ip_from 37.228.129.168;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
-set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
 set_real_ip_from 38.135.24.176;
@@ -1827,6 +1827,7 @@ set_real_ip_from 82.221.131.71;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.128.145;
+set_real_ip_from 82.96.141.198;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
