Update lists at 20251029-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -78,7 +78,6 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
-allow 108.181.69.137;
 allow 108.61.189.136;
 allow 109.169.33.163;
 allow 109.237.27.11;
@@ -115,7 +114,6 @@ allow 124.198.132.172;
 allow 124.198.132.237;
 allow 124.198.132.52;
 allow 125.212.241.131;
-allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -204,6 +202,7 @@ allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
+allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
@@ -286,7 +285,6 @@ allow 185.170.114.25;
 allow 185.177.238.26;
 allow 185.177.238.9;
 allow 185.183.157.214;
-allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.191.239.172;
 allow 185.191.239.49;
@@ -556,6 +554,7 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.237.155.109;
+allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
 allow 193.26.115.123;
@@ -1182,7 +1181,6 @@ allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
-allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
@@ -1234,10 +1232,10 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
-allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:12::1;
@@ -1827,7 +1825,6 @@ allow 82.221.131.71;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
-allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
