--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -78,7 +78,6 @@ deny 107.189.8.226;
 deny 107.189.8.56;
 deny 107.189.8.65;
 deny 107.189.8.70;
-deny 108.181.69.137;
 deny 108.61.189.136;
 deny 109.169.33.163;
 deny 109.237.27.11;
@@ -115,7 +114,6 @@ deny 124.198.132.172;
 deny 124.198.132.237;
 deny 124.198.132.52;
 deny 125.212.241.131;
-deny 125.253.56.119;
 deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
@@ -204,6 +202,7 @@ deny 176.65.149.100;
 deny 176.65.149.105;
 deny 176.65.149.84;
 deny 176.65.149.87;
+deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
 deny 177.93.140.66;
@@ -286,7 +285,6 @@ deny 185.170.114.25;
 deny 185.177.238.26;
 deny 185.177.238.9;
 deny 185.183.157.214;
-deny 185.183.159.40;
 deny 185.191.204.254;
 deny 185.191.239.172;
 deny 185.191.239.49;
@@ -556,6 +554,7 @@ deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
 deny 193.237.155.109;
+deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.239.232.235;
 deny 193.26.115.123;
@@ -1182,7 +1181,6 @@ deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
-deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 deny 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 deny 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 deny 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
@@ -1234,10 +1232,10 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
-deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:12::1;
@@ -1827,7 +1825,6 @@ deny 82.221.131.71;
 deny 82.221.131.86;
 deny 82.221.139.190;
 deny 82.29.128.145;
-deny 82.96.141.198;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
